Adding Gaussian Integral Youtube Content

--- a/content/20201008.md
+++ b/content/20201008.md
@@ -16,6 +16,10 @@ Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/
 
 # Lectures
 
+## The Gaussian Integral
+
+[Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
+
 ## Einstein's Special Theory of Relativity
 
 [Watch the lecture here](https://www.youtube.com/watch?v=fNrItQM3WBA).
