Adding Power Functions, LC Circuit, and RC Circuit

--- a/content/20201008.md
+++ b/content/20201008.md
@@ -16,6 +16,18 @@ Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/
 
 # Lectures
 
+## Power Functions and Their Derivatives
+
+[Watch the lecture here](https://www.youtube.com/watch?v=uaqxW7gOFa0).
+
+## LC Circuit
+
+[Watch the lecture here](https://www.youtube.com/watch?v=OF3AUQ2tOfk).
+
+## RC Circuit
+
+[Watch the lecture here](https://www.youtube.com/watch?v=-cidEbAdsZ0).
+
 ## The Gaussian Integral
 
 [Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
