Adding more math videos

--- a/content/20201009.md
+++ b/content/20201009.md
@@ -1,29 +1,55 @@
 +++
-title = "Greek Mythology Quizzes"
+title = "Science and Math Lectures"
 date = 2020-10-09
 draft = false
 in_search_index = true
 template = "page.html"
 
 [taxonomies] 
-tags = ["greek mythology"]
+tags = ["science", "math", "lectures"]
 categories = ["posts"]
 +++
 
-Greek Mythology Quizzes
+Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/channel/UCsG2_wYtteZ3iEx0POkHSWQ)
 
 <!-- more -->
 
-# Greek Mythology Quizzes
+# Lectures
 
-## Quiz 1: Greek Heroes
+## The Exponential Function
 
-[Take the quiz here](https://docs.google.com/forms/d/e/1FAIpQLSdInWNlcmbnvT0QXkkF35tHthQPsEzEFnybDpebvCk_wFpUzA/viewform?usp=sf_link).
+[Watch the lecture here](https://www.youtube.com/watch?v=17zoszGPd6k).
 
-## Quiz 2: Perseus the First Hero
+[Watch an additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b](https://www.youtube.com/watch?v=m8tSDSJ6y2w)
 
-[Take the quiz here](https://docs.google.com/forms/d/e/1FAIpQLSch_vheher0WXjfbHb_FSf3WWH-ZmzBF2ED827Pwe9zez6-kw/viewform?usp=sf_link).
+## de Moirve's Thereom
 
-## Quiz 3: Jason and the Argonauts
+[Watch the lecture here](https://www.youtube.com/watch?v=gEcC5UflHxg).
 
-[Take the quiz here](https://docs.google.com/forms/d/e/1FAIpQLSf0g0lo7yqBbSg1laLydpnwel0P2bOMPpEUF3JJ_fA83askGw/viewform?usp=sf_link).
+## Power Functions and Their Derivatives
+
+[Watch the lecture here](https://www.youtube.com/watch?v=uaqxW7gOFa0).
+
+## LC Circuit
+
+[Watch the lecture here](https://www.youtube.com/watch?v=OF3AUQ2tOfk).
+
+## RC Circuit
+
+[Watch the lecture here](https://www.youtube.com/watch?v=-cidEbAdsZ0).
+
+## The Gaussian Integral
+
+[Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
+
+## Einstein's Special Theory of Relativity
+
+[Watch the lecture here](https://www.youtube.com/watch?v=fNrItQM3WBA).
+
+## Lagrangian Mechanics
+
+[Watch the lecture here](https://www.youtube.com/watch?v=cpKcIsJZKlM).
+
+## Nebulae and Interacting Galaxies
+
+[Watch the lecture here](https://www.youtube.com/watch?v=1u6OkgRPVgc).
