--- a/content/20201008.md
+++ b/content/20201008.md
@@ -1,45 +1,29 @@
 +++
-title = "Science and Math Lectures"
-date = 2020-10-09
+title = "Greek Mythology Quizzes"
+date = 2020-10-08
 draft = false
 in_search_index = true
 template = "page.html"
 
 [taxonomies] 
-tags = ["science", "math", "lectures"]
+tags = ["greek mythology"]
 categories = ["posts"]
 +++
 
-Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/channel/UCsG2_wYtteZ3iEx0POkHSWQ)
+Greek Mythology Quizzes
 
 <!-- more -->
 
-# Lectures
+# Greek Mythology Quizzes
 
-## Power Functions and Their Derivatives
+## Quiz 1: Greek Heroes
 
-[Watch the lecture here](https://www.youtube.com/watch?v=uaqxW7gOFa0).
+[Take the quiz here](https://docs.google.com/forms/d/e/1FAIpQLSdInWNlcmbnvT0QXkkF35tHthQPsEzEFnybDpebvCk_wFpUzA/viewform?usp=sf_link).
 
-## LC Circuit
+## Quiz 2: Perseus the First Hero
 
-[Watch the lecture here](https://www.youtube.com/watch?v=OF3AUQ2tOfk).
+[Take the quiz here](https://docs.google.com/forms/d/e/1FAIpQLSch_vheher0WXjfbHb_FSf3WWH-ZmzBF2ED827Pwe9zez6-kw/viewform?usp=sf_link).
 
-## RC Circuit
+## Quiz 3: Jason and the Argonauts
 
-[Watch the lecture here](https://www.youtube.com/watch?v=-cidEbAdsZ0).
-
-## The Gaussian Integral
-
-[Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
-
-## Einstein's Special Theory of Relativity
-
-[Watch the lecture here](https://www.youtube.com/watch?v=fNrItQM3WBA).
-
-## Lagrangian Mechanics
-
-[Watch the lecture here](https://www.youtube.com/watch?v=cpKcIsJZKlM).
-
-## Nebulae and Interacting Galaxies
-
-[Watch the lecture here](https://www.youtube.com/watch?v=1u6OkgRPVgc).
+[Take the quiz here](https://docs.google.com/forms/d/e/1FAIpQLSf0g0lo7yqBbSg1laLydpnwel0P2bOMPpEUF3JJ_fA83askGw/viewform?usp=sf_link).
