--- a/content/20201009.md
+++ b/content/20201009.md
@@ -16,6 +16,10 @@ Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/
 
 # Lectures
 
+## Trigonometric Functions
+
+[Watch the lecture here](https://www.youtube.com/watch?v=f87v9DIEnRE).
+
 ## The Exponential Function
 
 [Watch the lecture here](https://www.youtube.com/watch?v=17zoszGPd6k).
@@ -24,7 +28,7 @@ Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/
 
 ## de Moirve's Thereom
 
-[Watch the lecture here](https://www.youtube.com/watch?v=gEcC5UflHxg).
+[Watch the lecture here](https://www.youtube.com/watch?v=alm7uI5vzcc).
 
 ## Power Functions and Their Derivatives
 
