Adding Voltage Divider Lecture

--- a/content/20201009.md
+++ b/content/20201009.md
@@ -16,6 +16,10 @@ Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/
 
 # Lectures
 
+## Voltage Divider Circuit
+
+[Watch the lecture here](https://www.youtube.com/watch?v=87SxO-NP0XU).
+
 ## Trigonometric Functions
 
 [Watch the lecture here](https://www.youtube.com/watch?v=f87v9DIEnRE).
