Adding Low Pass Filter Lecture

--- a/content/20201009.md
+++ b/content/20201009.md
@@ -16,6 +16,10 @@ Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/
 
 # Lectures
 
+## Low-Pass Filter Circuit
+
+[Watch the lecture here](https://www.youtube.com/watch?v=Or60fe2Z_iY).
+
 ## Voltage Divider Circuit
 
 [Watch the lecture here](https://www.youtube.com/watch?v=87SxO-NP0XU).
