Updating Passive RC Filter link

--- a/content/20201009.md
+++ b/content/20201009.md
@@ -16,9 +16,9 @@ Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/
 
 # Lectures
 
-## Low-Pass Filter Circuit
+## Passive RC Filter Circuits
 
-[Watch the lecture here](https://www.youtube.com/watch?v=Or60fe2Z_iY).
+[Watch the lecture here](https://www.youtube.com/watch?v=zHpEoPHfMhY).
 
 ## Voltage Divider Circuit
 
