--- a/content/20201009.md
+++ b/content/20201009.md
@@ -10,11 +10,15 @@ tags = ["science", "math", "lectures"]
 categories = ["posts"]
 +++
 
-Science and Math Lectures on [Arthur's YouTube Channel](https://www.youtube.com/channel/UCsG2_wYtteZ3iEx0POkHSWQ)
+Science and Math Lectures on [Arthur and Mei Mei School YouTube Channel](https://www.youtube.com/channel/UCsG2_wYtteZ3iEx0POkHSWQ)
 
 <!-- more -->
 
 # Lectures
+
+## Pythagorean Theorem
+
+[Watch the lecture here](https://www.youtube.com/watch?v=IAJJml6Dr-s).
 
 ## Passive RC Filter Circuits
 
