Buy the Pythagorean Puzzle

--- a/content/20201009.md
+++ b/content/20201009.md
@@ -18,7 +18,7 @@ Science and Math Lectures on [Arthur and Mei Mei School YouTube Channel](https:/
 
 ## Pythagorean Theorem
 
-[Watch the lecture here](https://www.youtube.com/watch?v=IAJJml6Dr-s).
+[Watch the lecture here](https://www.youtube.com/watch?v=IAJJml6Dr-s). [Buy the Pythagorean Puzzle here](https://www.etsy.com/shop/MathManipulatives).
 
 ## Passive RC Filter Circuits
 
