--- a/content/20220515.md
+++ b/content/20220515.md
@@ -11,3 +11,7 @@ categories = ["posts"]
 +++
 
 [Buy the Pythagorean Puzzle](https://www.etsy.com/shop/MathManipulatives)
+
+<!-- more -->
+
+[Buy the Pythagorean Puzzle](https://www.etsy.com/shop/MathManipulatives)
