Logo, authors, and content edits

--- a/data/blog/science-math-lectures.mdx
+++ b/data/blog/science-math-lectures.mdx
@@ -4,62 +4,41 @@ date: '2020-10-09'
 tags: ['science', 'math', 'lectures']
 draft: false
 summary: Science and Math Lectures on Arthur and Mei Mei School YouTube Channel
+authors: ['arthur']
 ---
 
 Science and Math Lectures on [Arthur and Mei Mei School YouTube Channel](https://www.youtube.com/channel/UCsG2_wYtteZ3iEx0POkHSWQ)
 
-# Lectures
-
-## Pythagorean Theorem
-
-[Watch the lecture here](https://www.youtube.com/watch?v=IAJJml6Dr-s). [Buy the Pythagorean Puzzle here](https://www.etsy.com/shop/MathManipulatives).
-
-## Passive RC Filter Circuits
-
-[Watch the lecture here](https://www.youtube.com/watch?v=zHpEoPHfMhY).
-
-## Voltage Divider Circuit
-
-[Watch the lecture here](https://www.youtube.com/watch?v=87SxO-NP0XU).
-
-## Trigonometric Functions
+# Trigonometric Functions
 
 [Watch the lecture here](https://www.youtube.com/watch?v=f87v9DIEnRE).
 
-## The Exponential Function
+# The Exponential Function
 
 [Watch the lecture here](https://www.youtube.com/watch?v=17zoszGPd6k).
 
 [Watch an additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b](https://www.youtube.com/watch?v=m8tSDSJ6y2w)
 
-## de Moirve's Thereom
+# de Moirve's Thereom
 
 [Watch the lecture here](https://www.youtube.com/watch?v=alm7uI5vzcc).
 
-## Power Functions and Their Derivatives
+# Power Functions and Their Derivatives
 
 [Watch the lecture here](https://www.youtube.com/watch?v=uaqxW7gOFa0).
 
-## LC Circuit
-
-[Watch the lecture here](https://www.youtube.com/watch?v=OF3AUQ2tOfk).
-
-## RC Circuit
-
-[Watch the lecture here](https://www.youtube.com/watch?v=-cidEbAdsZ0).
-
-## The Gaussian Integral
+# The Gaussian Integral
 
 [Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
 
-## Einstein's Special Theory of Relativity
+# Einstein's Special Theory of Relativity
 
 [Watch the lecture here](https://www.youtube.com/watch?v=fNrItQM3WBA).
 
-## Lagrangian Mechanics
+# Lagrangian Mechanics
 
 [Watch the lecture here](https://www.youtube.com/watch?v=cpKcIsJZKlM).
 
-## Nebulae and Interacting Galaxies
+# Nebulae and Interacting Galaxies
 
 [Watch the lecture here](https://www.youtube.com/watch?v=1u6OkgRPVgc).
