--- a/data/blog/greek-quizzes.mdx
+++ b/data/blog/greek-quizzes.mdx
@@ -2,11 +2,15 @@
 title: Greek Mythology Quizzes
 date: '2020-10-08'
 tags: ['greek', 'mythology', 'quizzes']
+layout: PostBanner
+images: ['/static/images/leto.jpg']
 draft: false
 summary: Greek Mythology Quizzes
 ---
 
 # Greek Mythology Quizzes
+
+We watched two of the [Ray Harryhausen](https://en.wikipedia.org/wiki/Ray_Harryhausen) films about Greek myths: [Clash of the Titans](<https://en.wikipedia.org/wiki/Clash_of_the_Titans_(1981_film)>), [Jason and the Argonauts](<https://en.wikipedia.org/wiki/Jason_and_the_Argonauts_(1963_film)>). In order to watch each film, we had to pass a quiz.
 
 ## Quiz 1: Greek Heroes
 
