--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -2,6 +2,8 @@
 title: Pythagorean Theorem Puzzle
 date: '2022-05-15'
 tags: ['math', 'puzzles']
+layout: PostBanner
+images: ['/static/images/pythagorean-puzzle.jpg']
 draft: false
 summary: Pythagorean Theorem Puzzle
 ---
@@ -12,7 +14,7 @@ summary: Pythagorean Theorem Puzzle
 
 # Buy your's today!
 
-Send us an email if you want to buy a Pythagorean Puzzle
+[Send us an email](daniel.p.bank+arthurmeimei@gmail.com) if you want to buy a Pythagorean Puzzle!
 
 ### Old Etsy Shop (defunct)
 
