--- a/data/blog/circuits.mdx
+++ b/data/blog/circuits.mdx
@@ -51,7 +51,7 @@ The voltage divider consistently reduces the amplitude by half while preserving 
 - When replacing a resistor with a capacitor, the behavior changes
 - A capacitor's resistance (impedance) varies based on its charge state
 - The impedance of a capacitor with a sine wave input can be calculated using complex notation:
-  - \(Z = \frac{1}{i\omega C}\) where:
+  - $Z = \frac{1}{i\omega C}$ where:
     - i is the imaginary unit
     - ω (omega) is the angular frequency
     - C is the capacitance
@@ -84,15 +84,15 @@ The circuit demonstrates fundamental principles of electrical engineering includ
 ## Mathematical Analysis
 
 - The general solution for charge (q) in an LC circuit is:
-  - \(q = A\cos(\omega t) + B\sin(\omega t)\)
-  - Alternatively: \(q = C\sin(\omega t + \phi)\)
+  - $q = A\cos(\omega t) + B\sin(\omega t)$
+  - Alternatively: $q = C\sin(\omega t + \phi)$
   - All solutions are wave-like, where:
     - Changing phase moves the wave left / right
     - Changing amplitude makes the wave bigger / smaller
 
 ## Differential Equations
 
-- The differential equation for an LC circuit: \(\ddot{q} + q = 0\)
+- The differential equation for an LC circuit: $\ddot{q} + q = 0$
 - This shows both sine and cosine functions are solutions
 - Similar to the equation governing a spring system
 
@@ -105,7 +105,7 @@ The circuit demonstrates fundamental principles of electrical engineering includ
 
 ## LRC Circuit
 
-- The governing equation: \(L\ddot{q} + R\dot{q} + \frac{q}{C} = 0\)
+- The governing equation: $L\ddot{q} + R\dot{q} + \frac{q}{C} = 0$
 - Similar to a bouncing ball that loses energy with each bounce
 
 ## Thermodynamics Connection
