--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -14,7 +14,7 @@ summary: Pythagorean Theorem Puzzle
 
 # Buy your's today!
 
-[Send us an email](daniel.p.bank+arthurmeimei@gmail.com) if you want to buy a Pythagorean Puzzle!
+Send us an email if you want to buy a Pythagorean Puzzle!
 
 ### Old Etsy Shop (defunct)
 
