Updating science post

--- a/data/blog/science-math-lectures.mdx
+++ b/data/blog/science-math-lectures.mdx
@@ -15,11 +15,11 @@ authors: ['arthur']
 - [The Exponential Function](https://www.youtube.com/watch?v=f87v9DIEnRE)
   - [additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b](https://www.youtube.com/watch?v=m8tSDSJ6y2w)
 - [de Moirve's Thereom](https://www.youtube.com/watch?v=alm7uI5vzcc)
-- [Power Functions and Their Derivatives](https://www.youtube.com/watch?v=uaqxW7gOFa0)
-- [The Gaussian Integral](https://www.youtube.com/watch?v=xIOs2ysIqn8)
-- [Einstein's Special Theory of Relativity](https://www.youtube.com/watch?v=fNrItQM3WBA)
 - [Lagrangian Mechanics](https://www.youtube.com/watch?v=cpKcIsJZKlM)
+- [The Gaussian Integral](https://www.youtube.com/watch?v=xIOs2ysIqn8)
 - [Nebulae and Interacting Galaxies](https://www.youtube.com/watch?v=1u6OkgRPVgc)
+- [Power Functions and Their Derivatives](https://www.youtube.com/watch?v=uaqxW7gOFa0)
+- [Einstein's Special Theory of Relativity](https://www.youtube.com/watch?v=fNrItQM3WBA)
 
 # Trigonometric Functions
 
@@ -39,17 +39,19 @@ authors: ['arthur']
 
 [Watch the lecture here](https://www.youtube.com/watch?v=cpKcIsJZKlM).
 
+# The Gaussian Integral
+
+[Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
+
 # Nebulae and Interacting Galaxies
 
 [Watch the lecture here](https://www.youtube.com/watch?v=1u6OkgRPVgc).
 
+A young Arthur (six years old) reviews various [Messier](https://en.wikipedia.org/wiki/Messier_object) and [NGC](https://en.wikipedia.org/wiki/List_of_NGC_objects) objects including nebulae and galaxies. This YouTube video is special because Arthur's hero, [David Butler](https://www.youtube.com/channel/UCNwSxyl2KmhdAjHLR6xGR0A), of [How Far Away Is It](https://howfarawayisit.com/) fame left a supportive comment on the video.
+
 # Power Functions and Their Derivatives
 
 [Watch the lecture here](https://www.youtube.com/watch?v=uaqxW7gOFa0).
-
-# The Gaussian Integral
-
-[Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
 
 ## Key Concepts
 
@@ -97,9 +99,7 @@ The presentation elegantly connects Pascal's Triangle to calculus by showing how
 
 [Watch the lecture here](https://www.youtube.com/watch?v=fNrItQM3WBA).
 
-# The Story of Relativity: Understanding Light Speed and Time Dilation
-
-## Historical Context
+## Historical Context: Understanding Light Speed and Time Dilation
 
 The understanding of light's behavior has evolved dramatically over time:
 
