--- a/data/authors/arthur.mdx
+++ b/data/authors/arthur.mdx
@@ -3,6 +3,7 @@ name: Arthur (Ge Ge)
 avatar: /static/images/arthur.png
 occupation: Author
 company: Arthur Publishing Company
+github: https://github.com/arthurbank
 ---
 
 Arthur is an author.
