Update Pythagorean Puzzle to embed Youtube

--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -3,18 +3,28 @@ title: Pythagorean Theorem Puzzle
 date: '2022-05-15'
 tags: ['math', 'puzzles']
 layout: PostBanner
-images: ['/static/images/pythagorean-puzzle.jpg']
+images: ['/static/images/pythagorean-puzzle1.jpg']
 draft: false
 summary: Pythagorean Theorem Puzzle
 ---
 
 # Demo Video
 
-[See it in action](https://www.youtube.com/watch?v=IAJJml6Dr-s)
+<iframe
+  width="100%"
+  height="400"
+  src="https://www.youtube.com/embed/IAJJml6Dr-s"
+  title="Pythagorean Theorem Puzzle Demo"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
 
 # Buy your's today!
 
 Send us an email if you want to buy a Pythagorean Puzzle!
+
+![Pythagorean Puzzle](/static/images/pythagorean-puzzle1.jpg)
 
 ### Old Etsy Shop (defunct)
 
