--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -11,13 +11,14 @@ summary: Pythagorean Theorem Puzzle
 # Demo Video
 
 <iframe
-  width="100%"
-  height="400"
-  src="https://www.youtube.com/embed/IAJJml6Dr-s"
-  title="Pythagorean Theorem Puzzle Demo"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/IAJJml6Dr-s?si=OWdkUtV6wFcCm8mx"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen
 ></iframe>
 
 # Buy your's today!
