--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -13,19 +13,19 @@ summary: Pythagorean Theorem Puzzle
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/IAJJml6Dr-s?si=OWdkUtV6wFcCm8mx"
+  src="https://www.youtube-nocookie.com/embed/IAJJml6Dr-s?si=1rdupgyP6ws1JyOa"
   title="YouTube video player"
-  frameborder="0"
+  frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  referrerpolicy="strict-origin-when-cross-origin"
-  allowfullscreen
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
 ></iframe>
 
 # Buy your's today!
 
 Send us an email if you want to buy a Pythagorean Puzzle!
 
-![Pythagorean Puzzle](/static/images/pythagorean-puzzle1.jpg)
+![Pythagorean Puzzle](/static/images/pythagorean-puzzle0.jpg)
 
 ### Old Etsy Shop (defunct)
 
