Adding more embeddings

--- a/data/blog/circuits.mdx
+++ b/data/blog/circuits.mdx
@@ -17,7 +17,16 @@ authors: ['arthur']
 
 # Voltage Divider Circuit
 
-[Watch the lecture here](https://www.youtube.com/watch?v=87SxO-NP0XU).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/87SxO-NP0XU?si=xh8IggZRaCKFqdMM"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 A voltage divider circuit consists of two resistors (R1 and R2) connected in series between the input voltage and ground, with the output taken between the resistors.
 
@@ -35,7 +44,16 @@ The voltage divider consistently reduces the amplitude by half while preserving 
 
 # Passive RC Filter Circuits
 
-[Watch the lecture here](https://www.youtube.com/watch?v=zHpEoPHfMhY).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/zHpEoPHfMhY?si=wvaNM0okkv8-_zxY"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 ## Resistive Voltage Divider
 
@@ -68,7 +86,16 @@ The circuit demonstrates fundamental principles of electrical engineering includ
 
 # LC Circuit
 
-[Watch the lecture here](https://www.youtube.com/watch?v=OF3AUQ2tOfk).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/OF3AUQ2tOfk?si=xK3z3z37goKcJjiX"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 ## Basic Components
 
