--- a/data/blog/pythagorean-puzzle.mdx
+++ b/data/blog/pythagorean-puzzle.mdx
@@ -13,7 +13,7 @@ summary: Pythagorean Theorem Puzzle
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube-nocookie.com/embed/IAJJml6Dr-s?si=1rdupgyP6ws1JyOa"
+  src="https://www.youtube.com/embed/IAJJml6Dr-s?si=1rdupgyP6ws1JyOa"
   title="YouTube video player"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
