Adding more embeddings

--- a/data/blog/science-math-lectures.mdx
+++ b/data/blog/science-math-lectures.mdx
@@ -23,35 +23,108 @@ authors: ['arthur']
 
 # Trigonometric Functions
 
-[Watch the lecture here](https://www.youtube.com/watch?v=f87v9DIEnRE).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/f87v9DIEnRE?si=av-33eKZ-AwBRLOt"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 # The Exponential Function
 
-[Watch the lecture here](https://www.youtube.com/watch?v=17zoszGPd6k).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/17zoszGPd6k?si=l4Hhsxq-PM6jvkjQ"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
-[Watch an additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b](https://www.youtube.com/watch?v=m8tSDSJ6y2w)
+Additional proof of the basic exponentiation identity, e^(a+b) = e^a \* e^b
 
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/m8tSDSJ6y2w?si=mArcIaoiSvI00NFc"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 # de Moirve's Thereom
 
-[Watch the lecture here](https://www.youtube.com/watch?v=alm7uI5vzcc).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/alm7uI5vzcc?si=zaLK5HJQPXNuuFbA"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 # Lagrangian Mechanics
 
-[Watch the lecture here](https://www.youtube.com/watch?v=cpKcIsJZKlM).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/cpKcIsJZKlM?si=2pbCwSMZAMIEelbN"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 # The Gaussian Integral
 
-[Watch the lecture here](https://www.youtube.com/watch?v=xIOs2ysIqn8).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/xIOs2ysIqn8?si=CDksna-SqFRbPAmO"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 # Nebulae and Interacting Galaxies
 
-[Watch the lecture here](https://www.youtube.com/watch?v=1u6OkgRPVgc).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/1u6OkgRPVgc?si=7ngCM0r63EKAJAe0"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 A young Arthur (six years old) reviews various [Messier](https://en.wikipedia.org/wiki/Messier_object) and [NGC](https://en.wikipedia.org/wiki/List_of_NGC_objects) objects including nebulae and galaxies. This YouTube video is special because Arthur's hero, [David Butler](https://www.youtube.com/channel/UCNwSxyl2KmhdAjHLR6xGR0A), of [How Far Away Is It](https://howfarawayisit.com/) fame left a supportive comment on the video.
 
 # Power Functions and Their Derivatives
 
-[Watch the lecture here](https://www.youtube.com/watch?v=uaqxW7gOFa0).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/uaqxW7gOFa0?si=1v_p8QCbb-RXz195"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 ## Key Concepts
 
@@ -97,7 +170,16 @@ The presentation elegantly connects Pascal's Triangle to calculus by showing how
 
 # Einstein's Special Theory of Relativity
 
-[Watch the lecture here](https://www.youtube.com/watch?v=fNrItQM3WBA).
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/fNrItQM3WBA?si=an2tjBUGqC1iG3R4"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+></iframe>
 
 ## Historical Context: Understanding Light Speed and Time Dilation
 
